--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ dotnet run</code></pre>
                │
     ┌──────────┴──────────┐
     │                     │
-┌───▼─────────┐    ┌─────▼──────────┐
+┌───▼─────────┐    ┌──────▼─────────┐
 │  Customer   │    │     Admin      │
 │   Module    │    │    Module      │
 └─────┬───────┘    └────┬───────────┘
@@ -706,11 +706,11 @@ dotnet run</code></pre>
 
             <div class="stats-grid">
                 <div class="stat-card">
-                    <h3>2,334</h3>
+                    <h3>2,347</h3>
                     <p>Total Lines of Code</p>
                 </div>
                 <div class="stat-card">
-                    <h3>20</h3>
+                    <h3>18</h3>
                     <p>Classes</p>
                 </div>
                 <div class="stat-card">
@@ -1072,7 +1072,7 @@ if (booking.PaymentStatus == PaymentStatus.Paid)
                     <p>All Core Requirements Met</p>
                 </div>
                 <div class="stat-card">
-                    <h3>2,334</h3>
+                    <h3>4,639</h3>
                     <p>Lines of Production Code</p>
                 </div>
                 <div class="stat-card">
@@ -1131,13 +1131,13 @@ if (booking.PaymentStatus == PaymentStatus.Paid)
             </div>
 
             <h3>Personal Reflection</h3>
-            <p>This project provided invaluable hands-on experience in building a complete software system from requirements gathering through implementation and testing. The challenges encountered—particularly with seat management, payment deadlines, and inventory synchronization—taught important lessons about software architecture and the importance of thinking through state transitions before coding.</p>
+            <p>This project provided invaluable hands-on experience in building a complete software system from requirements gathering through implementation and testing. The challenges encountered; particularly with seat management, payment deadlines, and inventory synchronization, taught important lessons about software architecture and the importance of thinking through state transitions before coding.</p>
 
             <p>The experience of building a user-facing application reinforced that code quality isn't just about functionality, but also about creating intuitive, error-resistant interfaces that guide users to success. The admin dashboard development highlighted the importance of reporting and analytics in business applications.</p>
 
             <h3>🙏 Acknowledgments</h3>
             <div class="info-box info">
-                <p>Special thanks to the instructors and peers who provided valuable feedback throughout development. This project would not have been possible without the comprehensive C# documentation from Microsoft and the supportive developer community on Stack Overflow.</p>
+                <p>Special thanks to Engr. Julian Semblante and to my peers who provided valuable feedback throughout the development process. This project was also made possible by countless late-night debugging sessions, YouTube tutorials, and the assistance of AI tools that helped guide and refine the work.</p>
             </div>
 
             <h3>📞 Contact & Contribution</h3>
